--- a/src/main/resources/templates/error/common.html
+++ b/src/main/resources/templates/error/common.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<body>
-    <th:block th:replace="~{error/_content::common}">
-        <h1 th:text="${status}"></h1>
-    </th:block>
-</body>
+<html xmlns:th="http://www.thymeleaf.org"
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{front/layouts/main}">
+<main layout:fragment="content">
+    <th:block th:replace="~{error/_content::common}"></th:block>
+</main>
 </html>
