--- a/src/main/resources/templates/front/outlines/header.html
+++ b/src/main/resources/templates/front/outlines/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://wwww.thymeleaf.org"
+    xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <header th:fragment="common">
         <th:block sec:authorize="isAuthenticated()">
             <a th:href="@{/mypage}" th:text="#{마이페이지}"></a>
