--- a/src/main/resources/templates/front/layouts/main.html
+++ b/src/main/resources/templates/front/layouts/main.html
@@ -21,15 +21,15 @@
     <script th:each="file : ${addCommonScript}" th:src="@{/common/js/{file}.js(file=${file})}"></script>
 
     <script th:src="@{/front/js/common.js}"></script>
-    <script th:each="file : ${addScript}" th:src="@{/js/{file}.js(file=${file})}"></script>
+    <script th:each="file : ${addScript}" th:src="@{/front/js/{file}.js(file=${file})}"></script>
 
     <th:block layout:fragment="addScript"></th:block>
 
 </head>
-    <body>
-        <header th:replace="~{front/outlines/header::common}"></header>
-        <main layout:fragment="content"></main>
-        <footer th:replace="~{front/outlines/footer::common}"></footer>
-        <iframe name="ifrmProcess" class="dn"></iframe>
-    </body>
+<body>
+<header th:replace="~{front/outlines/header::common}"></header>
+<main layout:fragment="content"></main>
+<footer th:replace="~{front/outlines/footer::common}"></footer>
+<iframe name="ifrmProcess" class="dn"></iframe>
+</body>
 </html>
