--- a/src/main/resources/templates/mobile/layouts/main.html
+++ b/src/main/resources/templates/mobile/layouts/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="_csrf" th:content="${_csrf.token}">
     <meta name="_csrf_header" th:content="${_csrf.headerName}">
-    <meta name="viewport" content="width=device-width,user-scaleable=yes,initial-scale=1.0,maximum-scale=3.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width,user-scalable=yes,initial-scale=1.0,maximum-scale=3.0, minimum-scale=1.0">
     <title th:if="${pageTitle != null}" th:text="${pageTitle}"></title>
 
     <link rel="stylesheet" type="text/css" th:href="@{/common/css/style.css}">
@@ -27,10 +27,10 @@
     <th:block layout:fragment="addScript"></th:block>
 
 </head>
-    <body>
-        <header th:replace="~{mobile/outlines/header::common}"></header>
-        <main layout:fragment="content"></main>
-        <footer th:replace="~{mobile/outlines/footer::common}"></footer>
-        <iframe name="ifrmProcess" class="dn"></iframe>
-    </body>
+<body>
+<header th:replace="~{mobile/outlines/header::common}"></header>
+<main layout:fragment="content"></main>
+<footer th:replace="~{mobile/outlines/footer::common}"></footer>
+<iframe name="ifrmProcess" class="dn"></iframe>
+</body>
 </html>
