--- a/src/main/resources/templates/admin/board/add.html
+++ b/src/main/resources/templates/admin/board/add.html
@@ -8,7 +8,7 @@
     <form name="frmSave" method="post" th:action="@{/admin/board/save}" autocomplete="off">
         <input type="hidden" name="mode" value="add">
 
-        <th:block th:replace="~{admin/board/_from::common}"></th:block>
+        <th:block th:replace="~{admin/board/_form::common}"></th:block>
 
         <div class="btns">
             <button type="reset">다시입력</button>
