--- a/src/main/resources/templates/admin/board/edit.html
+++ b/src/main/resources/templates/admin/board/edit.html
@@ -8,12 +8,13 @@
     <form name="frmSave" method="post" th:action="@{/admin/board/save}" autocomplete="off">
         <input type="hidden" name="mode" value="edit">
 
-        <th:block th:replace="~{admin/board/_from::common}"></th:block>
+        <th:block th:replace="~{admin/board/_form::common}"></th:block>
 
         <div class="btns">
             <button type="reset">다시입력</button>
             <button type="submit">수정하기</button>
         </div>
     </form>
+
 </section>
 </html>
