--- a/src/main/resources/templates/front/board/update.html
+++ b/src/main/resources/templates/front/board/update.html
@@ -2,10 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{front/layouts/main}">
+
 <main layout:fragment="content">
     <form name="frmSave" th:action="@{/board/save}" autocomplete="off">
         <input type="hidden" name="mode" value="update">
-        <input type="hidden" name="bId" value="">
+        <input type="hidden" name="seq" value="">
 
         <th:block th:replace="~{front/board/_form::common}"></th:block>
 
