--- a/src/main/resources/templates/admin/board/list.html
+++ b/src/main/resources/templates/admin/board/list.html
@@ -5,5 +5,6 @@
 <section layout:fragment="content">
     <h1 th:text="${pageTitle}"></h1>
 
+    <th:block th:replace="~{common/_pagination::pagination}"></th:block>
 </section>
 </html>
